# ml_by_example

./: .gitignore  README.md  pyproject.toml
chapter2_nlp/: kmeans_clustering.py  topic_modeling.py
chapter4_classification_svm/: chapter4.ipynb  gaussian_kernel.ipynb
chapter6_logistic_regression/: prediction_with_logistic_regression.ipynb
src/chapter2_nlp/: 20news.py  data_preprocessing.py
src/chapter3_spam_detection/: chapter3.ipynb  clean_emails.py  read_from_file.py
src/chapter3_spam_detection/constant/: email_text.py
src/chapter4_classification_svm/: save.py  svm_implementation.ipynb  svm_with_multi_classes.ipynb  topic_classification.ipynb
src/chapter5_decision_trees/: cart_decision_tree.ipynb
src/chapter6_logistic_regression/: click_through_prediction.ipynb  gradient_descent.ipynb  logistic_regression_classifier.ipynb  mechanics_of_logistic_regression.ipynb  one_hot_encoding.ipynb
src/chapter7_price_prediction/: data_acquisition.ipynb
src/week5/machine-learning-ex4/ex4/: nnCostFunction.m
