[tool.poetry]
name = "ml_by_example"
version = "0.1.0"
description = "Practice using ML by Example Book."
authors = ["kdiri <kemaldiri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.2"
numpy = "^1.17.3"
scipy = "^1.3.1"
statsmodels = "^0.10.1"
scikit-learn = "^0.21.3"
pmdarima = "^1.3.0"
black = "^19.10b0"
pytest = "^5.0.1"
pytest-cov = "^2.7"
mock = "^3.0"
pylint = "^2.3"
mypy = "^0.740"
nltk = "^3.5"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
